WIP - state left by Dan, Jerome and Carl.

--- a/reference/SimpleCalculator/Directory.Packages.props
+++ b/reference/SimpleCalculator/Directory.Packages.props
@@ -36,17 +36,17 @@
     <PackageVersion Include="Uno.Extensions.Serialization" Version="2.3.0-dev.254" />
     <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="2.3.0-dev.254" />
     <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="2.3.0-dev.254" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="2.4.0-dev.42" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.99" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version=" 2.4.0-dev.99" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material.Markup" Version="0.1.0-dev.105" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="2.4.0-dev.46" />
+    <PackageVersion Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.103" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version=" 2.4.0-dev.103" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.103" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
     <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.32" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
     <PackageVersion Include="Uno.WinUI" Version="4.6.18" />
-    <PackageVersion Include="Uno.WinUI.Markup" Version="0.1.0-dev.112" />
+    <PackageVersion Include="Uno.WinUI.Markup" Version="4.6.0-dev.10" />
     <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.6.18" />
     <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.6.18" />
     <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.6.18" />
