chore: theme switching packages updates, markup working.

--- a/reference/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Uno.Material.WinUI" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" />
 		<PackageReference Include="Uno.Extensions.Authentication.WinUI" />
