--- a/reference/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="SkiaSharp.Skottie" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Uno.Material.WinUI" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
 		<PackageReference Include="Uno.Extensions.Authentication.WinUI" />
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
