--- a/reference/SimpleCalculator/Directory.Packages.props
+++ b/reference/SimpleCalculator/Directory.Packages.props
@@ -17,48 +17,49 @@
     <PackageVersion Include="NUnit" Version="3.13.2" />
     <PackageVersion Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.2" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.2" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-    <PackageVersion Include="Uno.Extensions.Authentication" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Authentication.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Configuration" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Core" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Hosting" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Http" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Http.Refit" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Localization" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="$(UnoExtensionsVersion)" />
+    <PackageVersion Include="Uno.Extensions.Authentication" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Authentication.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Configuration" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Core" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Hosting" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Http" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Http.Refit" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Localization" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="2.3.0-dev.263" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.Serilog" Version="$(UnoExtensionsVersion)" />
+    <PackageVersion Include="Uno.Extensions.Logging.Serilog" Version="2.3.0-dev.263" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Navigation" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Reactive" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Serialization" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="$(UnoExtensionsVersion)" />
-    <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="$(UnoExtensionsVersion)" />
+    <PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Navigation" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Reactive" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Serialization" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="2.3.0-dev.263" />
+    <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="2.3.0-dev.263" />
     <PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.120" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="$(UnoMaterialVersion)" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="$(UnoToolkitVersion)" />
-		<!-- <PackageVersion Include="Uno.Toolkit.WinUI.Material.Markup" /> -->
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="$(UnoToolkitVersion)" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="$(UnoToolkitVersion)" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="2.4.0-dev.57" />
+    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.57" />
+    <PackageVersion Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.110" />
+    <!-- <PackageVersion Include="Uno.Toolkit.WinUI.Material.Markup" /> -->
+    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.110" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.110" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
     <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.32" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
     <PackageVersion Include="Uno.WinUI" Version="4.6.19" />
-    <PackageVersion Include="Uno.WinUI.Markup" Version="4.6.0-dev.11" />
-    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.6.18" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.6.18" />
-    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.6.18" />
-    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.6.18" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
+    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.48" />
+    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.7.0-dev.48" />
+    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.7.0-dev.48" />
+    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.7.0-dev.48" />
+    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.7.0-dev.48" />
     <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
     <PackageVersion Include="Xamarin.UITest" Version="3.2.6" />
   </ItemGroup>
