--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
@@ -31,7 +31,11 @@
 	  <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.100" />
 	  <PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />
 	  <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+	  <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Interactivity.WinUI" Version="2.3.1-uno.2" />
+	  <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.3.1-uno.2" />
 	  <PackageReference Include="Uno.SourceGenerationTasks" Version="4.2.0" />
+	  <PackageReference Include="Uno.WinUI" Version="4.6.19" />
+	  <PackageReference Include="Uno.WinUI.Runtime.Skia.Wpf" Version="4.6.19" />
 	  <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.6.19" />
 	  <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
 	  <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
