fix: Revert CPM in Commerce app

--- a/reference/Commerce/Commerce/Commerce.csproj
+++ b/reference/Commerce/Commerce/Commerce.csproj
@@ -5,21 +5,22 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" />
-		<PackageReference Include="Uno.Extensions.Authentication" />
-		<PackageReference Include="Uno.Extensions.Configuration" />
-		<PackageReference Include="Uno.Extensions.Core" />
-		<PackageReference Include="Uno.Extensions.Hosting" />
-		<PackageReference Include="Uno.Extensions.Http" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" />
-		<PackageReference Include="Uno.Extensions.Localization" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" />
-		<PackageReference Include="Uno.Extensions.Navigation" />
-		<PackageReference Include="Uno.Extensions.Serialization" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" />
-		<PackageReference Include="Uno.Extensions.Reactive" />
-		<PackageReference Include="Uno.Extensions.Reactive.Messaging" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12"/>
+		<PackageReference Include="Uno.Extensions.Authentication" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Core" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Http" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="$(UnoExtensionsVersion)" />
 	</ItemGroup>
 </Project>
