--- a/reference/Commerce/Commerce.Skia.Linux.FrameBuffer/Commerce.Skia.Linux.FrameBuffer.csproj
+++ b/reference/Commerce/Commerce.Skia.Linux.FrameBuffer/Commerce.Skia.Linux.FrameBuffer.csproj
@@ -13,34 +13,37 @@
 		<UpToDateCheckInput Include="..\Commerce.UI\**\*.xaml" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" />
-		<PackageReference Include="SkiaSharp.Skottie" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
-		<PackageReference Include="Uno.Material.WinUI" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
-		<PackageReference Include="Uno.Toolkit.WinUI" />
-		<PackageReference Include="Uno.Extensions.Authentication.WinUI" />
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" />
-		<PackageReference Include="Uno.Extensions.Authentication" />
-		<PackageReference Include="Uno.Extensions.Configuration" />
-		<PackageReference Include="Uno.Extensions.Core" />
-		<PackageReference Include="Uno.Extensions.Hosting" />
-		<PackageReference Include="Uno.Extensions.Http" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" />
-		<PackageReference Include="Uno.Extensions.Localization" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" />
-		<PackageReference Include="Uno.Extensions.Navigation" />
-		<PackageReference Include="Uno.Extensions.Serialization" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" />
-		<PackageReference Include="Uno.Extensions.Reactive" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.2" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.2" />
+
+		<PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer"  Version="$(UnoVersion)" />
+		<PackageReference Include="Uno.WinUI.RemoteControl"  Version="$(UnoVersion)" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging"  Version="$(UnoVersion)" />
+		<PackageReference Include="Uno.Material.WinUI" Version="$(UnoMaterialVersion)" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="$(UnoToolkitVersion)"/>
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="$(UnoToolkitVersion)"/>
+		
+		<PackageReference Include="Uno.Extensions.Authentication" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Core" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Http" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="$(UnoExtensionsVersion)" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="$(UnoExtensionsVersion)" />
+
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Commerce\Commerce.csproj" />
