chore: Material Sample - Update to net6

--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF/UnoMaterialSample.Skia.WPF.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF/UnoMaterialSample.Skia.WPF.csproj
@@ -4,6 +4,8 @@
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+	<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+	<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>  
   </PropertyGroup>
   <ItemGroup Label="AssemblyInfo">
     <AssemblyAttribute Include="System.Runtime.InteropServices.ComVisibleAttribute">
