--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
@@ -17,6 +17,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.57" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.110" />
+    <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
     <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
