--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -31,13 +31,16 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.57" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.57" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.110" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
 
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
