--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Server/SimpleCalculator.Server.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Server/SimpleCalculator.Server.csproj
@@ -1,13 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
-	</ItemGroup>
 
 
 </Project>
