chore: updating packages to latest version

--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
@@ -18,15 +18,15 @@
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.57" />
-    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.57" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.110" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
-    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.7.0-dev.158" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.158" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.158" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.0-dev.158" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
   </ItemGroup>
