--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -45,17 +45,17 @@
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.57" />
-    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.57" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.110" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
-    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.0-dev.158" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.158" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.158" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.7" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.7" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.0-dev.158" />
   </ItemGroup>
   <Import Project="..\SimpleCalculator.Shared\SimpleCalculator.Shared.projitems" Label="Shared" Condition="Exists('..\SimpleCalculator.Shared\SimpleCalculator.Shared.projitems')" />
 </Project>
