--- a/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -28,11 +28,18 @@
 		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.6.19" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.62" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.158" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.158" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.158" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.7.0-dev.158" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="'$(TargetFramework)'=='net7.0-android'">
