--- a/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator-net7/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
@@ -23,10 +23,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.62" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
 
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
@@ -37,7 +44,7 @@
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix"/>
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<!--
 		If you encounter this error message:
@@ -51,6 +58,6 @@
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.25" />
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.25" />
 	</ItemGroup>
-	
+
 	<Import Project="..\SimpleCalculator.Shared\SimpleCalculator.Shared.projitems" Label="Shared" />
 </Project>
