--- a/reference/SimpleCalculatorVanilla/SimpleCalculator.Server/SimpleCalculator.Server.csproj
+++ b/reference/SimpleCalculatorVanilla/SimpleCalculator.Server/SimpleCalculator.Server.csproj
@@ -5,5 +5,9 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Uno.Wasm.Bootstrap.Server" Version="7.0.7" />
+	</ItemGroup>
+
 
 </Project>
