chore: CatApi Sample - Update to net6

--- a/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.Windows/TheCatApiClient.Windows.csproj
+++ b/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.Windows/TheCatApiClient.Windows.csproj
@@ -54,8 +54,9 @@
 		This means that the two packages below must be aligned with the "build" version number of
 		the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
 		must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-		-->		
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.27" />
+		-->
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.25" />
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.25" />
 	</ItemGroup>
 	
 	<Import Project="..\TheCatApiClient.Shared\TheCatApiClient.Shared.projitems" Label="Shared" />	
