feat: use uno.themes markup constants

--- a/reference/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
     <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.62" />
     <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
