--- a/reference/SimpleCalculator/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Skia.Linux.FrameBuffer/SimpleCalculator.Skia.Linux.FrameBuffer.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.263" />
     <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
+    <PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.12" />
     <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.7.0-dev.158" />
