--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Mobile/UnoCupertinoSample.Mobile.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Mobile/UnoCupertinoSample.Mobile.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
@@ -31,10 +31,10 @@
 		<PackageReference Include="Uno.WinUI" Version="4.6.19" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Cupertino" Version="2.3.0" />
-		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.4.0-dev.64" />
 
 	</ItemGroup>
 	<Choose>
