--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
 		<OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
@@ -15,7 +15,7 @@
 		<UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.19" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
@@ -23,7 +23,7 @@
 		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Cupertino" Version="2.3.0" />
-		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.4.0-dev.64" />
 
 	</ItemGroup>
 	<Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" />
