--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Wasm/UnoCupertinoSample.Wasm.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Wasm/UnoCupertinoSample.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
@@ -41,17 +41,16 @@
 		<None Include="wwwroot\web.config" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.7" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.7" />
 		<PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Cupertino" Version="2.3.0" />
-		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.4.0-dev.64" />
 	</ItemGroup>
 	<Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems')" />
 </Project>
