chore: Update to net6.0 and WinUI

--- a/UI/HtmlControls/HtmlControls/HtmlControls.csproj
+++ b/UI/HtmlControls/HtmlControls/HtmlControls.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.5.12" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
   </ItemGroup>
 
 </Project>
