chore: SQlLite Sample - Update to net6

--- a/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Mobile/SQLiteSample.Mobile.csproj
+++ b/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Mobile/SQLiteSample.Mobile.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
@@ -13,12 +13,15 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">maccatalyst-x64</RuntimeIdentifier>
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
-  <ItemGroup>
-	<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />  
+  <ItemGroup>  
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0" />  
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />  
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />  
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.0" />  
     <PackageReference Include="Uno.WinUI" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
   </ItemGroup>
   <Choose>
