--- a/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Wasm/SQLiteSample.Wasm.csproj
+++ b/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Wasm/SQLiteSample.Wasm.csproj
@@ -41,8 +41,13 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-	<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />  
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
