--- a/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Windows/SQLiteSample.Windows.csproj
+++ b/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Windows/SQLiteSample.Windows.csproj
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.0" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
