fix: fix gtk and wpf packages

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
@@ -17,6 +17,9 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+	  <PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 	  <PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
 	  <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />
 	  <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />
