chore: Tidy up code to use uno.toolkit.ui for theme switching

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
@@ -17,9 +17,10 @@
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net6.0-macos'">10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
-  <ItemGroup>		
-	
-	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
+  <ItemGroup>
+
+	  <PackageReference Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.136" />
+	  <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
 	<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />  
 	<PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />		
 	<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />		
