--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
@@ -17,6 +17,7 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+	  <PackageReference Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.136" />
 	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 	  <PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
