--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
@@ -40,7 +40,8 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />    
+	  <PackageReference Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.136" />
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />    
     <PackageReference Include="Uno.CommunityToolkit.WinUI" Version="7.1.100" />
     <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
