--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Windows/WCTDataTreeTabSample.Windows.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Windows/WCTDataTreeTabSample.Windows.csproj
@@ -22,7 +22,8 @@
 		<Content Include="Images\Wide310x150Logo.scale-200.png" />
 	</ItemGroup>
 
-	<ItemGroup>	
+	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.136" />
 		<PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
 		<PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221116.1" />
