fix: Removing build warning on wasm

--- a/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <NoWarn>NU1701</NoWarn>
+    <NoWarn>NU1701;NU1504</NoWarn>
 		
 	</PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
