chore: fix databindign

--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Mobile/UnoGoodReads.Mobile.csproj
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Mobile/UnoGoodReads.Mobile.csproj
@@ -22,6 +22,7 @@
 	<PackageReference Include="Bogus">
 		<Version>34.0.2</Version>
 	</PackageReference>
+	<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 	<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 	<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
   </ItemGroup>
