--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Windows/UnoGoodReads.Windows.csproj
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Windows/UnoGoodReads.Windows.csproj
@@ -23,15 +23,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221116.1" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		 <PackageReference Include="Bogus">
       <Version>34.0.2</Version>
     </PackageReference>
 		 <PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+		<PackageReference Include="Uno.WinUI" Version="4.6.19" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
