--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
@@ -15,11 +15,15 @@
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>	
+    <PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />	
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.39" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
   </ItemGroup>
