--- a/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Mobile/Uno.Sample.ControlLibrary.Mobile.csproj
+++ b/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Mobile/Uno.Sample.ControlLibrary.Mobile.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
@@ -20,6 +20,9 @@
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\XamlControlLibrary\XamlControlLibrary.csproj" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net6.0-android'">
