--- a/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Windows/Uno.Sample.ControlLibrary.Windows.csproj
+++ b/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Windows/Uno.Sample.ControlLibrary.Windows.csproj
@@ -35,7 +35,10 @@
        Tools extension to be activated for this project even if the Windows App SDK Nuget
        package has not yet been restored -->
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
-		<ProjectCapability Include="Msix"/>
+		<ProjectCapability Include="Msix" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\XamlControlLibrary\XamlControlLibrary.csproj" />
 	</ItemGroup>
 	
 	<ItemGroup>
