fix: fixed the heads updates to .net6 because it is outdated.

--- a/UI/XamlBasics/ListViewSample/ListViewSample.Mobile/MacOS/Info.plist
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Mobile/MacOS/Info.plist
@@ -10,8 +10,6 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -20,13 +18,21 @@
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>${AuthorCopyright:HtmlEncode}</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
 	<key>ATSApplicationFontsPath</key>
 	<string>Fonts/uno-fluentui-assets.ttf</string>
+
+	<!--
+	Adjust this to your application's encryption usage.
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	-->
 </dict>
 </plist>
