--- a/UI/XamlBasics/ListViewSample/ListViewSample.Mobile/MacCatalyst/Info.plist
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Mobile/MacCatalyst/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+	<key>CFBundleName</key>
+	<string>ListViewSample</string>
 	<key>CFBundleDisplayName</key>
 	<string>ListViewSample</string>
 	<key>CFBundleIdentifier</key>
@@ -10,12 +12,12 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.15.1</string>
 	<key>UIDeviceFamily</key>
 	<array>
-	  <integer>2</integer>
+		<integer>2</integer>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -30,5 +32,12 @@
 	<array>
 	  <string>Fonts/uno-fluentui-assets.ttf</string>
 	</array>
+
+	<!--
+	Adjust this to your application's encryption usage.
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	-->
+
   </dict>
 </plist>
