--- a/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/ListViewSample.Skia.Wpf.csproj
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/ListViewSample.Skia.Wpf.csproj
@@ -5,9 +5,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.6.39" />
+    <PackageReference Include="Uno.UI" Version="4.6.39" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.6.39" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\ListViewSample.Shared\**\*.xaml" />
