chore: Updating Markup Packages and removing Server proj.

--- a/reference/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -44,13 +44,14 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.166" />
     <PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.490" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.64" />
-    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.64" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.115" />
-	<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
+    <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.6" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.8" />
+	  <PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.6" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.115" />
-    <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.13" />
+    <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.0-dev.266" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.266" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.266" />
