--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -35,13 +35,14 @@
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.166" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.490" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.64" />
-		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.64" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.115" />
-		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.8" />
+		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.6" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.115" />
-		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.13" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
 
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
